--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@hookform/resolvers": "^2.9.7",
+    "@mui/material": "^5.9.2",
+    "@prisma/client": "^4.1.1",
+    "@tanstack/react-query": "^4.0.10",
+    "axios": "^0.27.2",
     "next": "12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.34.0",
+    "transliteration": "^2.3.5",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "18.6.3",
@@ -19,6 +29,7 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
+    "prisma": "^4.1.1",
     "typescript": "4.7.4"
   }
 }
