--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "vercel-build": "prisma generate && prisma db push && next build"
   },
   "dependencies": {
     "@emotion/react": "^11.10.0",
@@ -16,14 +17,18 @@
     "@prisma/client": "^4.1.1",
     "@tanstack/react-query": "^4.0.10",
     "axios": "^0.27.2",
+    "cloudinary": "^1.30.1",
+    "formidable": "^3.2.4",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.2",
     "react-hook-form": "^7.34.0",
     "transliteration": "^2.3.5",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/formidable": "^2.0.5",
     "@types/node": "18.6.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
